# gw2_location_logger

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs
