[package]
name = "gw2_location_logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mumblelink_reader = "0.2.3"
clap = "3.0.0-beta.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3