[package]
name = "gw2_location_logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mumblelink_reader = { git = "https://github.com/norbert-k/mumblelink_reader", branch = "development" }
clap = "3.0.0-beta.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
